// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Welcome should change route to create profile 1`] = `
<DocumentFragment>
  <div
    class="w-full h-full"
  >
    <div
      class="sm:px-6 lg:px-8 px-4"
    >
      <div
        class="md:h-24 flex items-center flex-shrink-0 h-20"
      >
        <div
          class="bg-logo flex p-2 rounded-lg"
        >
          <img
            alt="ARK Logo"
            class="md:h-8 lg:h-10 h-6"
            src="ark-logo.png"
          />
        </div>
      </div>
    </div>
    <div
      class="sm:px-6 lg:px-0 container px-4 mx-auto text-center"
    >
      <h1
        class="mb-8 font-bold"
      >
        Welcome to ARK
      </h1>
      <div
        class="lg:w-4/5 xl:w-2/3 w-full mx-auto"
      >
        <svg>
          welcome-banner.svg
        </svg>
      </div>
      <div
        class="md:max-w-xl max-w-lg mx-auto my-8"
      >
        <p
          class="text-theme-neutral-dark md:text-base mb-4 text-sm"
        >
          Create a new Profile or login with your MarketSquare account to get started
        </p>
        <div
          class="md:space-x-3 md:flex-row flex flex-col"
        >
          <button
            class="sc-AxjAm ddQVWI w-full"
            color="primary"
            type="button"
          >
            <div
              class="sc-AxiKw dklFyP"
              height="20"
              width="20"
            >
              <svg>
                msq.svg
              </svg>
            </div>
            <span
              class="ml-2"
            >
              Sign in to MarketSquare
            </span>
          </button>
          <button
            class="sc-AxjAm ddJBbC md:mt-0 w-full mt-2"
            color="primary"
            type="button"
          >
            Create Profile
          </button>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Welcome should render 1`] = `
<DocumentFragment>
  <div
    class="w-full h-full"
  >
    <div
      class="sm:px-6 lg:px-8 px-4"
    >
      <div
        class="md:h-24 flex items-center flex-shrink-0 h-20"
      >
        <div
          class="bg-logo flex p-2 rounded-lg"
        >
          <img
            alt="ARK Logo"
            class="md:h-8 lg:h-10 h-6"
            src="ark-logo.png"
          />
        </div>
      </div>
    </div>
    <div
      class="sm:px-6 lg:px-0 container px-4 mx-auto text-center"
    >
      <h1
        class="mb-8 font-bold"
      >
        Welcome to ARK
      </h1>
      <div
        class="lg:w-4/5 xl:w-2/3 w-full mx-auto"
      >
        <svg>
          welcome-banner.svg
        </svg>
      </div>
      <div
        class="md:max-w-xl max-w-lg mx-auto my-8"
      >
        <p
          class="text-theme-neutral-dark md:text-base mb-4 text-sm"
        >
          Create a new Profile or login with your MarketSquare account to get started
        </p>
        <div
          class="md:space-x-3 md:flex-row flex flex-col"
        >
          <button
            class="sc-AxjAm ddQVWI w-full"
            color="primary"
            type="button"
          >
            <div
              class="sc-AxiKw dklFyP"
              height="20"
              width="20"
            >
              <svg>
                msq.svg
              </svg>
            </div>
            <span
              class="ml-2"
            >
              Sign in to MarketSquare
            </span>
          </button>
          <button
            class="sc-AxjAm ddJBbC md:mt-0 w-full mt-2"
            color="primary"
            type="button"
          >
            Create Profile
          </button>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Welcome should render with profiles 1`] = `
<DocumentFragment>
  <div
    class="w-full h-full"
  >
    <div
      class="sm:px-6 lg:px-8 px-4"
    >
      <div
        class="md:h-24 flex items-center flex-shrink-0 h-20"
      >
        <div
          class="bg-logo flex p-2 rounded-lg"
        >
          <img
            alt="ARK Logo"
            class="md:h-8 lg:h-10 h-6"
            src="ark-logo.png"
          />
        </div>
      </div>
    </div>
    <div
      class="sm:px-6 lg:px-0 container px-4 mx-auto text-center"
    >
      <h1
        class="mb-8 font-bold"
      >
        Welcome to ARK
      </h1>
      <div
        class="lg:w-4/5 xl:w-2/3 w-full mx-auto"
      >
        <svg>
          welcome-banner.svg
        </svg>
      </div>
      <div
        class="md:max-w-xl max-w-lg mx-auto my-8"
      >
        <h2
          class="md:text-2xl mx-4 text-xl font-bold"
        >
          Select Profile
        </h2>
        <p
          class="text-theme-neutral-dark md:text-base text-sm"
        >
          You already have a profile, you can choose any of them
        </p>
        <div
          class="mt-6 mb-8 space-y-3"
        >
          <div
            class="sc-AxhCb iaJYea"
          >
            <div
              class="relative px-6 py-4 sm:flex sm:items-center"
            >
              <div
                class="absolute top-0 right-0 flex items-center justify-center w-6 h-6 p-1 mt-3 -mt-2 -mr-4"
              >
                <div
                  class="relative"
                  data-testid="dropdown__toggle"
                >
                  <div
                    class="float-right outline-none cursor-pointer focus:outline-none"
                  >
                    <div
                      class="sc-AxiKw dklFyP"
                      height="20"
                      width="20"
                    >
                      <svg>
                        settings.svg
                      </svg>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="flex flex-row justify-between w-full"
              >
                <div
                  class="flex items-center"
                >
                  <div
                    class="Avatar__AvatarWrapper-sc-1vsy2s2-0 bFijeL"
                    data-testid="profile-card__user--avatar"
                  >
                    <img
                      alt="caio"
                      src="data:image/svg+xml;utf8,conic-gradient(from 454.09649800927116deg at 4.548667049063803% 26.27417113605142%, #5A67D8, calc(0 * 100% / 5), transparent 0),conic-gradient(from 261.71735164449046deg at 84.28090474289638% 48.75183449683145%, #319795, calc(1 * 100% / 5), transparent 0),conic-gradient(from 101.67493593262378deg at 23.78675936706429% 38.44714290418824%, #DD6B20, calc(2 * 100% / 5), transparent 0),conic-gradient(from 573.4082135308429deg at 83.79804452352604% 51.273672660572686%, #DD6B20, calc(3 * 100% / 5), transparent 0),conic-gradient(from 465.8247928575422deg at 2.4028861355309057% 44.3385891774737%, #4C51BF, calc(4 * 100% / 5), transparent 0)"
                      title="caio"
                    />
                  </div>
                  <div
                    class="mt-4 text-center sm:mt-0 sm:ml-4 sm:text-left"
                  >
                    <p
                      class="text-sm font-semibold text-theme-neutral"
                    >
                      Name
                    </p>
                    <p
                      class="font-semibold text-theme-neutral-dark"
                      data-testid="profile-card__user--name"
                    >
                      caio
                    </p>
                  </div>
                </div>
                <div
                  class="flex items-center"
                >
                  <div
                    class="mt-4 text-center sm:mt-0 sm:ml-4 sm:text-right"
                  >
                    <p
                      class="text-sm font-semibold text-theme-neutral"
                    >
                      Total Balance
                    </p>
                    <p
                      class="font-semibold text-theme-neutral-dark"
                      data-testid="profile-card__user--balance"
                    >
                      0
                    </p>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="sc-AxirZ cLgKLC border-theme-neutral-300"
          type="horizontal"
        />
        <p
          class="text-theme-neutral-dark md:text-base mb-4 text-sm"
        >
          Create a new Profile or login with your MarketSquare account to get started
        </p>
        <div
          class="md:space-x-3 md:flex-row flex flex-col"
        >
          <button
            class="sc-AxjAm ddQVWI w-full"
            color="primary"
            type="button"
          >
            <div
              class="sc-AxiKw dklFyP"
              height="20"
              width="20"
            >
              <svg>
                msq.svg
              </svg>
            </div>
            <span
              class="ml-2"
            >
              Sign in to MarketSquare
            </span>
          </button>
          <button
            class="sc-AxjAm ddJBbC md:mt-0 w-full mt-2"
            color="primary"
            type="button"
          >
            Create Profile
          </button>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
